# abra

./: .env.example  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
abra/: __init__.py
abra/analysis/: __init__.py  amazon.py  google_news.py  historical.py  insights.py  related_brands.py  seasonality_advanced.py  serpapi_news.py  star_products.py  youtube.py
abra/analysis/serpapi/: __init__.py  aggregator.py  brands.py  client.py  insights.py  questions.py  searches.py  shopping.py  stories.py
abra/components/: __init__.py  render.py
abra/components/cards/: base.py
abra/components/charts/: base.py
abra/components/layouts/: grids.py
abra/components/widgets/: base.py
abra/config/: __init__.py  constants.py  secrets.py
abra/core/: __init__.py  pytrends.py
abra/pages/: __init__.py  comparator.py  csv_analysis.py  historical.py  manual_search.py  url_analysis.py
abra/ui/: __init__.py  styles.py  theme.py
abra/utils/: __init__.py  helpers.py  sanitize.py
docs/: ARCHITECTURE.md
