[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abra"
version = "11.1.0"
description = "Advanced Brand Research & Analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["brand-analysis", "market-research", "google-trends"]
authors = [
    {name = "Abra Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pytrends>=4.9.2",
    "plotly>=5.14.0",
    "reportlab>=4.0.0",
    "requests>=2.31.0",
    "google-search-results>=2.4.2",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=abra --cov-report=html --cov-report=term-missing"
